# drama-remix

./: .gitignore  README.md  start.bat
.github/workflows/: build-backend.yml  build-flutter.yml
backend/: backend.spec  migrate_v3.py  pyproject.toml  standalone_main.py
backend/app/: __init__.py  auth_utils.py  config.py  database.py  main.py  utils.py
backend/app/models/: __init__.py  annotation.py  bgm.py  bundle.py  distribution.py  material.py  remix.py  review.py  user.py  voice.py  work.py
backend/app/routers/: __init__.py  annotations.py  auth.py  bgm.py  bundle.py  dashboard.py  distribution.py  materials.py  remix.py  render.py  review.py  voice.py
backend/app/schemas/: __init__.py  auth.py  bundle.py  common.py  material.py  remix.py
backend/app/services/: asr_service.py  audio_utils.py  cosyvoice_tts.py  edge_tts.py  fish_speech_tts.py  narration_service.py  remix_engine.py  render_service.py  review_engine.py  task_runner.py
drama_remix_app/: README.md  pubspec.yaml
drama_remix_app/lib/: main.dart
drama_remix_app/lib/services/: backend_service.dart
drama_remix_app/test/: widget_test.dart
drama_remix_app/windows/: CMakeLists.txt
drama_remix_app/windows/runner/: Runner.rc  main.cpp
frontend/: package-lock.json
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  Materials.tsx  RemixConfig.tsx  TaskMonitor.tsx  WorkGallery.tsx
